--- a/index_rtl.html
+++ b/index_rtl.html
@@ -39,19 +39,19 @@
     <!-- Profile Section -->
     <section id="profile" class="fade-in">
         <div class="section_pic-container">
-            <img src="./assets/profile-pic.png" alt="صورة جون دو"/>
+            <img src="assets/profile-pic.png" alt="صورة جون دو"/>
         </div>
         <div class="section_text">
             <p class="section_text_p1">مرحبًا، أنا</p>
             <h1 class="title">جون دو</h1>
             <p class="section_text_p2">مطور الواجهة الأمامية</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">تحميل السيرة الذاتية</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">معلومات الاتصال</button>
+                <button class="btn btn-color-2" onclick="window.open('assets/resume-example.pdf')">تحميل السيرة الذاتية</button>
+                <button class="btn btn-color-1" onclick="location.href='#contact'">معلومات الاتصال</button>
             </div>
             <div id="social-container">
-                <img src="./assets/linkedin.png" alt="لينكد إن" class="icon" onclick="location.href='http://www.linkedin.com'"/>
-                <img src="./assets/github.png" alt="جيت هاب" class="icon" onclick="location.href='http://github.com'"/>
+                <img src="assets/linkedin.png" alt="لينكد إن" class="icon" onclick="location.href='http://www.linkedin.com'"/>
+                <img src="assets/github.png" alt="جيت هاب" class="icon" onclick="location.href='http://github.com'"/>
             </div>
         </div>
     </section>
@@ -62,17 +62,17 @@
         <h1 class="title">من أنا</h1>
         <div class="section-container">
             <div class="section_pic-container">
-                <img src="./assets/about-pic.png" alt="صورة شخصية" class="about-pic"/>
+                <img src="assets/about-pic.png" alt="صورة شخصية" class="about-pic"/>
             </div>
             <div class="about-details-container">
                 <div class="about-container">
                     <div class="details-container">
-                        <img src="./assets/experience.png" alt="أيقونة الخبرة" class="icon"/>
+                        <img src="assets/experience.png" alt="أيقونة الخبرة" class="icon"/>
                         <h3>الخبرة</h3>
                         <p>3+ سنوات <br> مطور الواجهة الأمامية</p>
                     </div>
                     <div class="details-container">
-                        <img src="./assets/education.png" alt="أيقونة التعليم" class="icon"/>
+                        <img src="assets/education.png" alt="أيقونة التعليم" class="icon"/>
                         <h3>التعليم</h3>
                         <p>بكالوريوس علوم <br>ماجستير علوم</p>
                     </div>
@@ -94,35 +94,35 @@
                     <h2 class="experience-sub-title">مطور الواجهة الأمامية</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>HTML</h3>
                                 <p>خبير</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>CSS</h3>
                                 <p>خبير</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>SASS</h3>
                                 <p>متوسط</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>JavaScript</h3>
                                 <p>مبتدئ</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>TypeScript</h3>
                                 <p>مبتدئ</p>
@@ -134,21 +134,21 @@
                     <h2 class="experience-sub-title">مطور الواجهة الخلفية</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>Node.js</h3>
                                 <p>متوسط</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>Express.js</h3>
                                 <p>خبير</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="خبرة" class="icon"/>
+                            <img src="assets/checkmark.png" alt="خبرة" class="icon"/>
                             <div>
                                 <h3>Git</h3>
                                 <p>متوسط</p>
@@ -168,7 +168,7 @@
             <div class="about-container">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.png" alt="المشروع الأول" class="project-img"/>
+                        <img src="assets/project-1.png" alt="المشروع الأول" class="project-img"/>
                     </div>
                     <h2 class="experience-sub-title project-title">المشروع الأول</h2>
                     <div class="btn-container">
@@ -178,7 +178,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" alt="المشروع الثاني" class="project-img"/>
+                        <img src="assets/project-2.png" alt="المشروع الثاني" class="project-img"/>
                     </div>
                     <h2 class="experience-sub-title project-title">المشروع الثاني</h2>
                     <div class="btn-container">
@@ -188,7 +188,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-3.png" alt="المشروع الثالث" class="project-img"/>
+                        <img src="assets/project-3.png" alt="المشروع الثالث" class="project-img"/>
                     </div>
                     <h2 class="experience-sub-title project-title">المشروع الثالث</h2>
                     <div class="btn-container">
@@ -206,17 +206,17 @@
         <h1 class="title">اتصل بي</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img src="./assets/email.png" alt="أيقونة البريد الإلكتروني" class="icon contact-icon email-icon"/>
+                <img src="assets/email.png" alt="أيقونة البريد الإلكتروني" class="icon contact-icon email-icon"/>
                 <p><a href="mailto:examplemail@gmail.com">example@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="أيقونة لينكد إن" class="icon contact-icon"/>
+                <img src="assets/linkedin.png" alt="أيقونة لينكد إن" class="icon contact-icon"/>
                 <p><a href="https://www.linkedin.com">LinkedIn</a></p>
             </div>
         </div>
     </section>
     <div id="scrollArrow">
-        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"/>
+        <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow"/>
     </div>
 
     <!-- Footer Section -->
