--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="./assets/jd.png">
+    <link rel="icon" type="image/x-icon" href="assets/jd.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
     <!-- Navbar Section -->
     <nav id="navbar">
-        <div class="logo"><img src="./assets/jd_1.png" style="
+        <div class="logo"><img src="assets/jd_1.png" style="
             width: 180px;
             margin-top: 15px;
         "/></div>
@@ -24,7 +24,7 @@
     </nav>
     <nav id="hamburger-nav">
         <div class="logo">
-            <img src="./assets/jd_1.png" style="
+            <img src="assets/jd_1.png" style="
             width: 150px;
             margin-top: 15px;"/>
         </div>
@@ -47,19 +47,19 @@
     <!-- Profile Section -->
     <section id="profile" class="fade-in">
         <div class="section_pic-container">
-            <img src="./assets/profile-pic.png" alt="John Doe Profile Picture"/>
+            <img src="assets/profile-pic.png" alt="John Doe Profile Picture"/>
         </div>
         <div class="section_text">
             <p class="section_text_p1">Hello,I'm</p>
             <h1 class="title">John Doe</h1>
             <p class="section_text_p2">Frontend Devolper</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+                <button class="btn btn-color-2" onclick="window.open('assets/resume-example.pdf')">Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Info</button>
             </div>
             <div id="social-container">
-                <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='http://www.linkedin.com'"/>
-                <img src="./assets/github.png" alt="My GitHub Profile" class="icon" onclick="location.href='http://github.com'"/>
+                <img src="assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='http://www.linkedin.com'"/>
+                <img src="assets/github.png" alt="My GitHub Profile" class="icon" onclick="location.href='http://github.com'"/>
 
             </div>
         </div>
@@ -71,17 +71,17 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section_pic-container">
-                <img src="./assets/about-pic.png" alt="Profile Picture" class="about-pic"/>
+                <img src="assets/about-pic.png" alt="Profile Picture" class="about-pic"/>
             </div>
             <div class="about-details-container">
                 <div class="about-container">
                     <div class="details-container">
-                        <img src="./assets/experience.png" alt="Experience Icon" class="icon"/>
+                        <img src="assets/experience.png" alt="Experience Icon" class="icon"/>
                         <h3>Experience</h3>
                         <p>3+ years <br> Frontend Devolper</p>
                     </div>
                     <div class="details-container">
-                        <img src="./assets/education.png" alt="Experience Icon" class="icon"/>
+                        <img src="assets/education.png" alt="Experience Icon" class="icon"/>
                         <h3>Education</h3>
                         <p>B.Sc. Bachelors Degree <br>M.Sc. Master Degree</p>
                     </div>
@@ -104,42 +104,42 @@
                     <h2 class="experience-sub-title">Frontend Devolper</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>HTML</h3>
                                 <p>Experineced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>CSS</h3>
                                 <p>Experineced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>SASS</h3>
                                 <p>Intermidate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>Javascript</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>Typescript</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>Typescript</h3>
                                 <p>Basic</p>
@@ -151,21 +151,21 @@
                     <h2 class="experience-sub-title">Backend Devolper</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>Node JS</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>Express JS</h3>
                                 <p>Experineced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon"/>
+                            <img src="assets/checkmark.png" alt="Experience" class="icon"/>
                             <div>
                                 <h3>GIT</h3>
                                 <p>Intermidate</p>
@@ -185,7 +185,7 @@
             <div class="about-container">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-1.png" alt="Project 1" class="project-img"/>
+                    <img src="assets/project-1.png" alt="Project 1" class="project-img"/>
                 </div>
                 <h2 class="experience-sub-title project-title">Project One</h2>
                 <div class="btn-container">
@@ -195,7 +195,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-2.png" alt="Project 2" class="project-img"/>
+                    <img src="assets/project-2.png" alt="Project 2" class="project-img"/>
                 </div>
                 <h2 class="experience-sub-title project-title">Project Two</h2>
                 <div class="btn-container">
@@ -205,7 +205,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-3.png" alt="Project 2" class="project-img"/>
+                    <img src="assets/project-3.png" alt="Project 2" class="project-img"/>
                 </div>
                 <h2 class="experience-sub-title project-title">Project Three</h2>
                 <div class="btn-container">
@@ -223,18 +223,18 @@
         <h1 class="title">Contact</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img src="./assets/email.png" alt="Email Icon" class="icon contact-icon email-icon"/>
+                <img src="assets/email.png" alt="Email Icon" class="icon contact-icon email-icon"/>
                 <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon"/>
+                <img src="assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon"/>
                 <p><a href="https://www.linkedin.com">LinkedIn</a></p>
             </div>
         </div>
     </section>
     
     <div id="scrollArrow">
-        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"/>
+        <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow"/>
     </div>
 
     <!-- Footer Section -->
